--- a/app/views/antigen/v2/order-home-test-kit/order-summary.html
+++ b/app/views/antigen/v2/order-home-test-kit/order-summary.html
@@ -46,7 +46,7 @@
           </dt>
           <dd class="govuk-summary-list__value">
               {% if data['delivery-address-same'] and data['delivery-address'] !== '5 addresses found' %}
-                {{ data['delivery-address'] }}
+                {{ data['delivery-address'] or '5 Souterhead Road, London, LS1 3BE'}}
               {% else %}
                 {{ data['delivery-address-line-1'] or '5 Souterhead Road' }}<br>
                 {% if data['delivery-address-line-2'] %}
