--- a/app/views/antigen/v2/order-home-test-kit/confirmation-email.html
+++ b/app/views/antigen/v2/order-home-test-kit/confirmation-email.html
@@ -87,7 +87,7 @@
 {% block bodyEnd %}
 <div class="proto-action big">
   <a href="/antigen/{{version}}/order-home-test-kit/sms-messages/01-test-result-1">
-    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">SMS - PCR test result</div>
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 1</div>
   </a>
 </div>
 {% endblock %}
