--- a/app/views/antigen/v2/order-home-test-kit/sms-messages/03-test-result-2.html
+++ b/app/views/antigen/v2/order-home-test-kit/sms-messages/03-test-result-2.html
@@ -95,7 +95,7 @@
 {% block bodyEnd %}
 <div class="proto-action big">
   <a href="/antigen/{{version}}/order-home-test-kit/sms-messages/04-antibody-2">
-    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">SMS - 3 days post antibody order</div>
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 4</div>
   </a>
 </div>
 {% endblock %}
