--- a/app/views/antigen/v2/order-home-test-kit/sms-messages/01-test-result-1.html
+++ b/app/views/antigen/v2/order-home-test-kit/sms-messages/01-test-result-1.html
@@ -165,7 +165,7 @@
 {% block bodyEnd %}
 <div class="proto-action big">
   <a href="/antigen/{{version}}/order-home-test-kit/sms-messages/02-antibody-1">
-    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">SMS - Antibody order triggered</div>
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 2</div>
   </a>
 </div>
 {% endblock %}
