--- a/app/views/antigen/v2/global-registration/check-your-answers.html
+++ b/app/views/antigen/v2/global-registration/check-your-answers.html
@@ -44,7 +44,7 @@
             Name
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['first-name'] or 'John' }} {{ data['last-name'] or 'Appleseed' }}
+            {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="/antigen/{{version}}/global-registration/edit-check-answers/name">
