--- a/app/views/antigen/v2/global-registration/nhs-number-known.html
+++ b/app/views/antigen/v2/global-registration/nhs-number-known.html
@@ -35,7 +35,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="nhs-number-known-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
-                {{ pageTitle }}
+                Do you know {{ data['first-name'] or "Pete" }} {{ data['last-name'] or "Smith" }}'s NHS number?
               </h1>
             </legend>
             <span id="nhs-number-known-hint" class="govuk-body">
