--- a/app/views/antigen/v2/global-registration/people-confirmed.html
+++ b/app/views/antigen/v2/global-registration/people-confirmed.html
@@ -27,7 +27,7 @@
 
       <p class="govuk-body">
         You can <strong>add up to 3 people</strong> you live with for testing.<br><br>
-        If you need tests for <strong>more than 4 people</strong>, you'll need to complete this journey again and place a separate order.<br><br>
+        If you need tests for <strong>more than yourself and 3 other people</strong>, you'll need to complete this journey again and place a separate order.<br><br>
         <strong>For test sites:</strong><br>
         If you're arriving by motorbike, you can only take one other person you live with. They must wear full helmet and visor.<br><br>
         If you’re arriving by car or small van, everyone must be in the same vehicle and sit next to a window that opens. You'll stay in your vehicle during your visit.<br><br>
