--- a/app/views/antigen/v2/global-registration/people-confirmed-person-1.html
+++ b/app/views/antigen/v2/global-registration/people-confirmed-person-1.html
@@ -35,7 +35,7 @@
         You cannot order more than 4 home test kits at a time.
       </p>
 
-      <p class="govuk-body">Coronavirus test</p>
+      <p class="govuk-body govuk-!-margin-bottom-0 govuk-!-margin-top-7"><strong>Coronavirus test</strong></p>
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -46,7 +46,7 @@
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header">{{ data['first-name'] or 'John' }} {{ data['last-name'] or 'Appleseed' }}</th>
+            <th scope="row" class="govuk-table__header">{{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}</th>
             <td class="govuk-table__cell">
               {% if data['date-of-birth-month'] == "1" or data['date-of-birth-month'] == "01" %}
               {{ data['date-of-birth-day'] }} January {{ data['date-of-birth-year'] }}
