--- a/app/views/antigen/v2/global-registration/people-confirmed.html
+++ b/app/views/antigen/v2/global-registration/people-confirmed.html
@@ -35,6 +35,7 @@
         You cannot order more than 4 home test kits at a time.
       </p>
 
+      <p class="govuk-body govuk-!-margin-bottom-0 govuk-!-margin-top-7"><strong>Coronavirus test</strong></p>
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
