--- a/app/views/antigen/v2/refer-and-triage/postcode.html
+++ b/app/views/antigen/v2/refer-and-triage/postcode.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Enter a postcode" %}
+{% set pageTitle = "Enter a postcode to find test sites near you" %}
 
 {% extends "includes/layout.html" %}
 
@@ -26,15 +26,12 @@
 
       <form action="/antigen/{{version}}/refer-and-triage/do-you-have-a-car" method="post">
 
-        <fieldset class="govuk-fieldset" aria-describedby="post-code-hint">
+        <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
               {{ pageTitle }}
             </h1>
           </legend>
-          <span id="post-code-hint" class="govuk-body">
-            Enter a postcode to find out how to get a test near you.
-          </span>
           <div class="govuk-form-group govuk-!-margin-top-5">
             <label class="govuk-label" for="home-postcode">
               Postcode
