--- a/app/views/logresults-web-service/v2/site-operative/enter-qr-code-person.html
+++ b/app/views/logresults-web-service/v2/site-operative/enter-qr-code-person.html
@@ -63,9 +63,14 @@
                 <input maxlength="4" class="govuk-input govuk-input--width-3 govuk-!-margin-right-2" id="qr-code-8-person-1" name="qr-code-8-person-1" type="text" autofocus value={{ data['qr-code-8-person-1'] }}>
               </div>
 
-              <p class="govuk-body govuk-!-margin-top-4 govuk-!-margin-bottom-6">
-                <a href="/logresults-web-service/{{version}}/site-operative/qr-code-person" draggable="false" class="govuk-link govuk-!-margin-top-2">
+              <p class="govuk-body govuk-!-margin-top-7">
+                <a href="/logresults-web-service/{{version}}/site-operative/qr-code-person" draggable="false" class="govuk-link">
                   Scan the collect code
+                </a>
+              </p>
+              <p class="govuk-body govuk-!-margin-bottom-6">
+                <a href="/logresults-web-service/{{version}}/site-operative/anonymous-registration" draggable="false" class="govuk-link">
+                  This person doesn't have a collect code
                 </a>
               </p>
             </div>
