--- a/app/views/logresults-web-service/v2/site-operative/qr-code-person.html
+++ b/app/views/logresults-web-service/v2/site-operative/qr-code-person.html
@@ -45,12 +45,20 @@
           <img src="/public/images/code-scan.png" alt="camera view" class="scan-barcode" />
         </div>
         
-          <form class="govuk-!-width-two-thirds govuk-!-margin-top-2" action="/logresults-web-service/{{version}}/site-operative/enter-qr-code-person" style="display: flex; justify-content: center;" method="post">
-            <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1" name="qr-code-person-1" type="text" value="" style="display: none;">
-            <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1-confirm" name="qr-code-person-1-confirm" type="text" value="" style="display: none;">
-            <button data-module="govuk-button" class="link-styled-button govuk-!-font-size-19">
-              Enter collect code manually
-            </button>
+        <form class="govuk-!-width-two-thirds govuk-!-margin-top-2" action="/logresults-web-service/{{version}}/site-operative/enter-qr-code-person" style="display: flex; justify-content: center;" method="post">
+          <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1" name="qr-code-person-1" type="text" value="" style="display: none;">
+          <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1-confirm" name="qr-code-person-1-confirm" type="text" value="" style="display: none;">
+          <button data-module="govuk-button" class="link-styled-button govuk-!-font-size-19">
+            Enter collect code manually
+          </button>
+        </form>
+
+        <form class="govuk-!-width-two-thirds govuk-!-margin-top-2" action="/logresults-web-service/{{version}}/site-operative/anonymous-registration" style="display: flex; justify-content: center;" method="post">
+          <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1" name="qr-code-person-1" type="text" value="" style="display: none;">
+          <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1-confirm" name="qr-code-person-1-confirm" type="text" value="" style="display: none;">
+          <button data-module="govuk-button" class="link-styled-button govuk-!-font-size-19">
+            This person doesn't have a collect code
+          </button>
         </form>
   
     </div>
