--- a/app/views/logresults-web-service/v2/site-operative/anonymous-registration-option-2-error.html
+++ b/app/views/logresults-web-service/v2/site-operative/anonymous-registration-option-2-error.html
@@ -62,7 +62,7 @@
                 <!-- <input class="govuk-checkboxes__input" id="confirm" name="confirm" type="checkbox" value="Yes" onclick="checkBox()"> -->
                 <input class="govuk-checkboxes__input" id="anonymous-confirm" name="anonymous-confirm" type="checkbox" value="Yes">
                 <label class="govuk-label govuk-checkboxes__label" for="anonymous-confirm">
-                  By proceeding I confirm I am satisfied this person meets the criteria for issuing test kits without registration.
+                  I’ve read the above and confirm that the person cannot register.
                 </label>
               </div>
             </div>
