--- a/app/views/lfd-collection-registration/v1/confirmation-email.html
+++ b/app/views/lfd-collection-registration/v1/confirmation-email.html
@@ -65,12 +65,8 @@
 
     <h3 class="govuk-heading-s govuk-!-margin-top-4">Get more help</h3>
     <p class="govuk-body govuk-!-margin-bottom-2">
-      If you need more help, call:
+      If you need more help, call 119.
     </p>
-    <ul class="govuk-list govuk-list--bullet govuk-!-margin-left-4">
-      <li>119 if you’re in England, Wales or Northern Ireland</li>
-      <li>0300 303 2713 if you’re in Scotland</li>
-    </ul>
     <p class="govuk-body govuk-!-margin-bottom-2">
       Lines are open 7am to 11pm.
     </p>
