--- a/app/views/lfd-collection-registration/v1/mobile-number.html
+++ b/app/views/lfd-collection-registration/v1/mobile-number.html
@@ -28,7 +28,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/lfd-collection-registration/{{version}}/collecting-for" method="post">
+      <form action="/lfd-collection-registration/{{version}}/action10/mobile-number" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="mobile-number-hint">
