--- a/app/views/lfd-collection-registration/v1/nhs-account.html
+++ b/app/views/lfd-collection-registration/v1/nhs-account.html
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/lfd-collection-registration/{{version}}/pharmacy-collection">Back</a>
+  <a class="govuk-back-link" href="/lfd-collection-registration/{{version}}/country">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -33,7 +33,7 @@
           <strong>Sign in or create an account</strong>
         </label>
         <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          We’ll save your details each time you report a result. Creating an account only takes 2 minutes and you’ll save 5 minutes when reporting each result.
+          We’ll save your details each time you register to collect. Creating an account only takes 2 minutes and you’ll save time when registering to collect.
         </div>
       </div>
       <div class="govuk-radios__item">
@@ -42,7 +42,7 @@
           <strong>Continue without an account</strong>
         </label>
         <div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
-          We cannot save your details for future tests, so you'll need to enter all  information again.
+          We cannot save your details for future tests, so you'll need to enter all your information again.
         </div>
       </div>
     </div>
