--- a/app/views/lfd-collection-registration/v1/confirmation-option-2.html
+++ b/app/views/lfd-collection-registration/v1/confirmation-option-2.html
@@ -1,4 +1,4 @@
-set version = "v1" %}
+{% set version = "v1" %}
 {% set pageTitle = "Here is your collect code" %}
 
 {% extends "includes/layout.html" %}
@@ -40,8 +40,17 @@ set version = "v1" %}
 
     <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-8" style="text-align: center; line-height: 1em;">
       Collect code reference:<br><br>
-      <strong><span class="govuk-!-margin-right-2">NYX7</span><span class="govuk-!-margin-right-2">CT5Z</span><span class="govuk-!-margin-right-2">8VF7</span><span>7FW4</span></strong>
-    </p>
+      <strong>NYX7 - CT5Z - 8VF7 - 7FW4</strong></p>
+    
+    <!-- <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"> -->
+
+    <!-- <p class="govuk-body govuk-!-margin-top-4"><strong>{{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}</strong></p>
+    <p class="govuk-body">{{ data['email-address'] or 'name@email.com' }}<br>
+      {{ data['mobile-phone-number'] or '07472398473' }}</p>
+
+    <p class="govuk-body"><a href="#">Print collect code</a></p>
+
+    <hr> -->
 
     <h3 class="govuk-heading-s govuk-!-margin-top-6">What happens next</h3>
     <p class="govuk-body">
@@ -73,11 +82,6 @@ set version = "v1" %}
   </div>
 </div>
 
-<div class="proto-action big" style="bottom: 130px;">
-  <a href="/lfd-collection-registration/v1/confirmation">
-    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 1</div>
-  </a>
-</div>
 <div class="proto-action big" style="bottom: 50px;">
   <a href="/lfd-collection-registration/v1/confirmation-email">
     <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Confirmation email</div>
