--- a/app/views/lfd-collection-registration/v1/country.html
+++ b/app/views/lfd-collection-registration/v1/country.html
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/lfd-collection-registration/{{version}}/collecting-for">Back</a>
+  <a class="govuk-back-link" href="/lfd-collection-registration/{{version}}/do-you-have-symptoms">Back</a>
   
 {% endblock %}
 
