--- a/app/views/lfd-collection-registration/v1/sms.html
+++ b/app/views/lfd-collection-registration/v1/sms.html
@@ -84,12 +84,7 @@
 
           In each test pack you’ll find 7 rapid lateral flow tests and instructions on how to take the test and report results.<br><br>
 
-          Got any questions? Call our contact centre between 7am and 11pm:<br><br>
-
-          England, Wales and Northern Ireland: call 119 (free from mobiles and landlines)<br><br>
-
-          Scotland: call 0300 303 2713
-          <!-- (charged at your standard network rate) -->
+          Got any questions? Call 119 between 7am and 11pm.
         </p>
       </div>
 
