--- a/app/views/lfd-collection-registration/v1/check-your-answers.html
+++ b/app/views/lfd-collection-registration/v1/check-your-answers.html
@@ -150,7 +150,7 @@
             Home address
           </dt>
           <dd class="govuk-summary-list__value govuk-!-width-one-third">
-            {% if data['home-address'] %}
+            {% if data['home-address'] and data['home-address'] !== "5 addresses found" %}
             {{ data['home-address'] }}
             {% else %}
             {{ data['address-line-1'] }}<br>
